--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-    "author": "gabodmc",
+  "author": "gabodmc",
   "homepage": "https://github.com/gabodmc/front-js-template-alkemy#readme",
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,9 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "vite": "^3.1.0"
   }
 }
