--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,7 @@
         "plugin:react/recommended",
         "standard"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
