--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
-    "babel-plugin-macros": "^3.1.0",
+    "framer-motion": "^7.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
