--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
-    "framer-motion": "^7.6.5",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
+    "framer-motion": "^7.6.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
