--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "lint": "eslint --fix . --ext .js,.jsx"
   },
   "dependencies": {
-    "axios": "^1.1.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.6.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
