--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "author": "gabodmc",
   "homepage": "https://github.com/gabodmc/front-js-template-alkemy#readme",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
-    "framer-motion": "^7.6.5",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
+    "framer-motion": "^7.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
