--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,14 +8,20 @@
       "version": "detect"
     }
   },
-  "extends": ["plugin:react/recommended", "standard"],
+  "extends": [
+    "plugin:react/recommended",
+    "standard"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": [
+    "react"
+  ],
   "rules": {
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "space-before-function-paren": "off"
   }
 }
