--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "sweetalert2": "^11.6.6"
+    "sweetalert2": "^11.6.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
