--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-spinners": "^0.13.6",
+    "react-swipeable-list": "^1.6.0",
     "recharts": "^2.1.16",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
