--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,18 +8,13 @@
       "version": "detect"
     }
   },
-  "extends": [
-    "plugin:react/recommended",
-    "standard"
-  ],
+  "extends": ["plugin:react/recommended", "standard"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "rules": {
     "react/prop-types": "off",
     "space-before-function-paren": "off"
